# uk_house_price_index

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_aylesbury_ppi_db.py  build_postcode_lookups_db.py  collect_data.py  dashboard_basic.py  dashboard_improved.py  generate_plots.py
src/ukhpi/: data_collection.py  geo_ops.py  hpi.py  loggers.py  ppi.py  sparql.py  text.py  verify_hpi.py
src/ukhpi/cache/hpi_data/: aberdeenshire_1990_2025_hpi_01032026.csv  aberdeenshire_2020_2025_hpi_01022026.csv  adur_1990_2025_hpi_01032026.csv  amber_valley_1990_2025_hpi_01032026.csv  angus_1990_2025_hpi_01032026.csv  angus_2020_2025_hpi_01022026.csv  antrim_and_newtownabbey_1990_2025_hpi_01032026.csv  antrim_and_newtownabbey_2020_2025_hpi_01022026.csv  (+262 more)
src/ukhpi/core/: collection.py  hpi.py  ppi.py  sparql.py
src/ukhpi/dashboard/: annotations.py  app_basic.py  app_improved.py  callbacks.py  layout.py  tabs.py
src/ukhpi/geo/: ops.py
src/ukhpi/io/: loader.py  response.py  versioning.py  writer.py
src/ukhpi/plotting/: categories.py  generator.py  hpi_plots.py  save.py  theme.py
src/ukhpi/postcode_lookups/: aylesbury_postcodes.py  aylesbury_ppi.py  helper.py
src/ukhpi/utils/: basic_plots.py  data_loader.py  data_version.py  data_writer.py  helper.py  image_generator.py  response.py  save_plot.py
tests/: conftest.py  test_data_collection.py  test_data_version.py  test_geo_ops.py  test_hpi.py  test_postcode_lookups.py  test_ppi.py  test_sparql.py
uk_house_price_index/: geo_ops.py  hpi.py  ppi.py  sparql.py  try_hpi.ipynb  verify_hpi.py
uk_house_price_index/dashboard/: app_basic.py  app_improved.py
uk_house_price_index/helper_utils/: basic_plots.py  data_loader.py  data_version.py  data_writer.py  generate_markdown.py  helper.py  plotly_imports.py  response.py  save_plot.py  split_from_camel.py
uk_house_price_index/hpi_utils/: data_collection.py
uk_house_price_index/postcode_lookups/: aylesbury_postcodes.py  aylesbury_ppi.py  helper.py
uk_house_price_index/src/: geo_ops.py  hpi.py  ppi.py  sparql.py
uk_house_price_index/utils/: data_loader.py  data_version.py
(+16 files in other folders)
