[project]
name = "ukhpi"
version = "0.2.0"
description = "A self-serve dashboard and data toolkit for exploring the UK House Price Index (HPI) by geography and time period."
authors = [
    {name = "Dev Anbarasu",email = "anand26dev@gmail.com"}
]

packages = [{include = "ukhpi", from = "src"}]

license = {text = "APACHE 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dash (>=3.0.0,<4.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "dash-mantine-components (>=2.6.1,<3.0.0)"
]

[project.scripts]
ukhpi-dashboard = "ukhpi.dashboard.app_improved:main"
ukhpi-collect = "ukhpi.core.collection:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.11,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501 (line too long) is intentionally ignored: `ruff format` wraps code lines,
# and the remaining violations are docstring prose where re-wrapping hurts readability.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
